# tide-example

./: .gitignore  Cargo.toml
src/: main.rs
src/records/: article.rs
src/routes/: articles.rs
templates/articles/: index.html
