[package]
name = "tide-example"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
publish = false

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
tide = "0.16.0"
sqlx = { version = "0.4.2", features = ["runtime-async-std-native-tls", "sqlite", "chrono"] }
askama = { version = "0.10.5", features = ["with-tide"] }
serde = "1.0.124"
serde_urlencoded = "0.7.0"
askama_tide = "0.13.0"
async-sqlx-session = { version = "0.3.0", features = ["sqlite"] }
futures-util = "0.3.13"